--- a/index.css
+++ b/index.css
@@ -1,10 +1,70 @@
+html,
 body {
-  font-family: sans-serif;
+  width: 100%;
+  height: 100%;
 }
 
-.main-title {
+body {
+  font-family: 'Avenir', Helvetica, Arial, sans-serif;;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  margin: 0;
+  color: #35495e;
+}
+
+.main-introduction {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.main-content {
+  flex-grow: 1;
+  margin: 0 12rem;
+}
+
+footer {
+  flex-shrink: 0;
+  align-self: center;
+  margin: 2rem 0;
+}
+
+.disabled {
+  color: currentColor;
+  cursor: not-allowed;
+  opacity: 0.5;
+  text-decoration: none;
+  pointer-events: none;
+}
+
+.website-header {
+  margin-bottom: 3rem;
+}
+
+.headline {
+  color: #25ae90;
+}
+
+.sub-headline {
+  margin-bottom: 2rem;
+}
+
+.website-section {
+  margin-bottom: 3rem;
+}
+
+a {
+  color: #25ae90;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+nav.website-nav {
+  margin: 2rem auto 0 12rem;
 }
