--- a/index.css
+++ b/index.css
@@ -1,6 +1,18 @@
+:root {
+  --main-bg-color: white;
+  --main-color: #35495e;
+  --highlight-color: #25ae90;
+}
+
+:root[theme='dark'] {
+  --main-bg-color: #35495e;
+  --main-color: white;
+  --highlight-color: #66c6b1;
+}
+
+/* GLOBAL */
 html,
 body {
-  width: 100%;
   height: 100%;
 }
 
@@ -9,55 +21,30 @@ body {
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  margin: 0;
-  color: #35495e;
+  margin: 0 4rem;
+  background: var(--main-bg-color);
+  color: var(--main-color);
 }
 
-.main-introduction {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
+/* COMMON */
 .main-content {
+  display: flex;
   flex-grow: 1;
-  margin: 0 12rem;
+  justify-content: center;
+  align-items: center;
 }
 
-footer {
-  flex-shrink: 0;
-  align-self: center;
-  margin: 2rem 0;
-}
-
-.disabled {
-  color: currentColor;
-  cursor: not-allowed;
-  opacity: 0.5;
-  text-decoration: none;
-  pointer-events: none;
-}
-
-.website-header {
-  margin-bottom: 3rem;
-}
-
-.headline {
-  color: #25ae90;
-}
-
-.sub-headline {
-  margin-bottom: 2rem;
-}
-
+.website-header,
 .website-section {
   margin-bottom: 3rem;
 }
 
+.website-headline {
+  color: var(--highlight-color);
+}
+
 a {
-  color: #25ae90;
+  color: var(--highlight-color);
   text-decoration: none;
 }
 
@@ -65,6 +52,32 @@ a:hover {
   text-decoration: underline;
 }
 
+.website-link--disabled {
+  color: currentColor;
+  cursor: not-allowed;
+  opacity: 0.5;
+  text-decoration: none;
+  pointer-events: none;
+}
+
 nav.website-nav {
-  margin: 2rem auto 0 12rem;
+  margin-top: 2rem;
+}
+
+footer.website-footer {
+  flex-shrink: 0;
+  align-self: center;
+  font-size: 0.8rem;
+  margin: 2rem 0;
+}
+
+/* HOMEPAGE */
+.main-introduction {
+  text-align: center;
+}
+
+/* PAGES */
+article {
+  display: flex;
+  flex-direction: column;
 }
